# monGARS_webLLM

./: .gitignore  ARCHITECTURE.md  App.tsx  DEPLOY.md  README.md  app.json  architecture-plan.md  constants.ts  contextEngine.ts  contextProfiling.ts  conversation_analysis.md  decisionEngine.ts  embedding.worker.ts  externalTools.ts  index.css  index.html  memory.ts  memoryConfig.ts  metadata.json  models.ts  mon-gars.css  mon-gars.js  monGARS_factory.yml  mongars_factory_cli.py  package-lock.json  package.json  reasoning.ts  reasoningLog.ts  sourcesUtils.ts  speechPipeline.ts  speechUtils.ts  toolClients.ts  tsconfig.json  tsconfig.lint.json  types.ts  useAudioPlayback.ts  useFacebookSdk.ts  useSemanticMemory.ts  useSpeech.ts  useTurnDetection.ts  (+3 more)
.github/workflows/: deploy-to-ales27pm-github-io.yml  jekyll-gh-pages.yml  pipeline-ci.yml  static.yml
components/: CapabilityPills.tsx  ChatContainer.tsx  ChatMessageBubble.tsx  EmptyState.tsx  ErrorBoundary.tsx  Header.tsx  HeroHeader.tsx  InputBar.tsx  Message.tsx  ReasoningVisualizer.tsx  SearchIndicator.tsx  SettingsModal.tsx  StatusBar.tsx  Toast.tsx  ToastContainer.tsx  TypingIndicator.tsx  VoiceModePage.tsx
ios/: CarPlayScene.swift
scripts/: check-deps.mjs  dataset_prep.py  deploy-pages.mjs  pipeline-ci.ts  prepare-icons.mjs  prepare-pages-docs.mjs  run-vitest.mjs
services/: llm.ts
src/: App.tsx  theme.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icons.base64.json
tests/: brainUtils.test.ts  gpuService.web.test.ts  prompts.test.ts  toolRunner.test.ts  webllmService.web.test.ts
(+49 files in other folders)
